--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,16 +4,17 @@
 {% block content %}
   <div class="container-fluid py-4">
     <div class="row pb-4">
-      <div class="col">
-        <h1 class="h2 mb-0">MedDash</h1>
+      <div class="col" style="background-color: #406882">
+        <h1 class="h2 mb-0" style="color: #B1D0E0">MedDash</h1>
+        <!--<img class= "img-fluid" src = "/app/templates/Images/logopgn.png" alt="logo">-->
       </div>
     </div>
 
     <div class="row pb-4 h-50">
       <div class="col-12"> 
         There could be text here
-        <div class="row pb-4 bg-light h-100">
-          <div class="col-8 col-sm-2 bg-secondary bg-gradient text-white pt-2">
+        <div class="row pb-4 bg-light min-vh-100">
+          <div class="col-8 col-sm-2 text-white pt-2" style= "background-color: #1A374D">
             <form action="/action_page.php">
               <select class="form-select" id="sel1" name="sellist1" value = "Department">
                 <option>Select department:</option>
@@ -23,55 +24,59 @@
               </select>
               <br>
 
-              <p class= "fw-bold text-white">Select variables for graph 1:</p> 
-              
+              <p class= "fw-bold text-white">Select type of graph:</p> 
               <form action="/action_page.php">
-                <select class="form-select" style="width: 120px" id="sel2" name="sellist2" value = "selmen2">
-                  <option><p class = fw-bold>Y-axis</p></option>
-                  <option value = "sel2weigth">Weigth</option>
-                  <option value = "sel2heigth">Heigth</option>
-                  <option value = "sel2length">Length</option>
-                  <option value = "sel2fever">Fever</option>
+                <select class="form-select" style="width: 180px" id="sel2" name="sellist2" value = "selmen2">
+                  <option><p class = fw-bold>Type of graph: </p></option>
+                  <option value = "Pie">Pie chart</option>
+                  <option value = "Bar">Bar graph</option>
+                  <option value = "Line">Line graph</option>
+                  <option value = "Scatter">Scatterplot</option>
                 </select>
                 <br>
+              
               <form action="/action_page.php">
-                <select class="form-select" style="width: 120px" id="sel3" name="sellist3" value ="selmen3">
-                  <option><p class = fw-bold>X-axis</p></option>
-                  <option value = "sel3weigth">Weigth</option>
-                  <option value = "sel3heigth">Heigth</option>
-                  <option value = "sel3length">Length</option>
+                <select class="form-select" style="width: 120px" id="sel3" name="sellist3" value = "selmen3">
+                  <option><p class = fw-bold>Y-axis</p></option>
+                  <option value = "sel3weight">Weight</option>
+                  <option value = "sel3height">Height</option>
+                  <option value = "sel3lenght">Lenght</option>
                   <option value = "sel3fever">Fever</option>
                 </select>
                 <br>
+
+              <form action="/action_page.php">
+                <select class="form-select" style="width: 120px" id="sel4" name="sellist4" value ="selmen4">
+                  <option><p class = fw-bold>X-axis</p></option>
+                  <option value = "sel4weight">Weight</option>
+                  <option value = "sel4height">Height</option>
+                  <option value = "sel4lenght">Lenght</option>
+                  <option value = "sel4fever">Fever</option>
+                </select>
+                <br>
           </div>
 
-          <div class="col-4 col-sm-5 border">
-            Place for a graph
+          <div class="col-4 col-sm-5 border border-2 rounded text-center" style="color: #6998AB">
+            Graph 1
 
-            {% if(selmen2 == sel3heigth and selmen3 == sel3weigth) %}
-              <h3> Welcome </h3>
-            {% else %}
-              <h3> No </h3>
-            {% endif %}
-
-            <div class="row pb-4 bg-success">
-              Graph 1.1
+            <div class="row pb-4 bg-light border-top border-2" style="color: #6998AB">
+              <p class="text-center">Graph 2</p>
             </div>
 
-            <div class="row pb-4 bg-light">
-              Graph 1.2
+            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
+              <p class="text-center">Graph 3</p>
             </div>
           </div>
 
-          <div class="col-4 col-sm-5 border">
-            Place for another graph
+          <div class="col-4 col-sm-5 border border-2 rounded text-center" style="color: #6998AB">
+            Graph 4
 
-            <div class="row pb-4 bg-light">
-              Graph 2.1
+            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
+              <p class="text-center">Graph 5</p>
             </div>
 
-            <div class="row pb-4 bg-success">
-              Graph 2.2
+            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
+              <p class="text-center">Graph 6</p>
             </div>
           </div>
 
