--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,3 +3,13 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
 }
+
+.graph-container {
+  transition: box-shadow .3s;
+}
+
+.graph-container:hover {
+  cursor: pointer;
+  box-shadow: 0 0 11px rgba(33, 33, 33, .2);
+}
+
