--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
     {% block content %}{% endblock %} {% block scripts %}
     <!-- Optional JavaScript -->
     {{ bootstrap.load_js() }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
     {% endblock %}
   </body>
