--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,87 +1,51 @@
 {% extends "base.html" %}
 {% block title %}Care Dashboard{% endblock %}
-
 {% block content %}
-  <div class="container-fluid py-4">
-    <div class="row pb-4">
-      <div class="col" style="background-color: #406882">
-        <h1 class="h2 mb-0" style="color: #B1D0E0">MedDash</h1>
-        <!--<img class= "img-fluid" src = "/app/templates/Images/logopgn.png" alt="logo">-->
+<div class="container-fluid">
+  <div class="row">
+  </div>
+  <div class="row min-vh-100">
+    <div class="col-3 text-white pt-2" style= "background-color: #1A374D">
+      <h1 class="h2 mb-0" style="color: #B1D0E0">MedDash</h1>
+      <br>
+      <p>
+        To add a new graph, first select an container in which you want to place your new graph.
+      </p>
+      <button id="add-graph" type="button" class="btn btn-primary">Add a new graph</button>
+
+      <div id="select-graph">
+
       </div>
-    </div>
-
-    <div class="row pb-4 h-50">
-      <div class="col-12"> 
-        There could be text here
-        <div class="row pb-4 bg-light min-vh-100">
-          <div class="col-8 col-sm-2 text-white pt-2" style= "background-color: #1A374D">
-            <form action="/action_page.php">
-              <select class="form-select" id="sel1" name="sellist1" value = "Department">
-                <option>Select department:</option>
-                <option value="Emergencydept">Emergency</option>
-                <option value = "Childcaredept">Childcare</option>
-                <option value = "Orthopedicsdept">Orthopedics</option>
-              </select>
-              <br>
-
-              <p class= "fw-bold text-white">Select type of graph:</p> 
-              <form action="/action_page.php">
-                <select class="form-select" style="width: 180px" id="sel2" name="sellist2" value = "selmen2">
-                  <option><p class = fw-bold>Type of graph: </p></option>
-                  <option value = "Pie">Pie chart</option>
-                  <option value = "Bar">Bar graph</option>
-                  <option value = "Line">Line graph</option>
-                  <option value = "Scatter">Scatterplot</option>
-                </select>
-                <br>
-              
-              <form action="/action_page.php">
-                <select class="form-select" style="width: 120px" id="sel3" name="sellist3" value = "selmen3">
-                  <option><p class = fw-bold>Y-axis</p></option>
-                  <option value = "sel3weight">Weight</option>
-                  <option value = "sel3height">Height</option>
-                  <option value = "sel3lenght">Lenght</option>
-                  <option value = "sel3fever">Fever</option>
-                </select>
-                <br>
-
-              <form action="/action_page.php">
-                <select class="form-select" style="width: 120px" id="sel4" name="sellist4" value ="selmen4">
-                  <option><p class = fw-bold>X-axis</p></option>
-                  <option value = "sel4weight">Weight</option>
-                  <option value = "sel4height">Height</option>
-                  <option value = "sel4lenght">Lenght</option>
-                  <option value = "sel4fever">Fever</option>
-                </select>
-                <br>
-          </div>
-
-          <div class="col-4 col-sm-5 border border-2 rounded text-center" style="color: #6998AB">
-            Graph 1
-
-            <div class="row pb-4 bg-light border-top border-2" style="color: #6998AB">
-              <p class="text-center">Graph 2</p>
-            </div>
-
-            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
-              <p class="text-center">Graph 3</p>
-            </div>
-          </div>
-
-          <div class="col-4 col-sm-5 border border-2 rounded text-center" style="color: #6998AB">
-            Graph 4
-
-            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
-              <p class="text-center">Graph 5</p>
-            </div>
-
-            <div class="row pb-4 bg-light h-33 border-top border-2" style="color: #6998AB">
-              <p class="text-center">Graph 6</p>
-            </div>
-          </div>
+      <div id="select-resource">
 
       </div>
     </div>
-  </div>  
+    <div class="col-9">
+      <div class="row g-2">
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-1"></div>
+        </div>
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-2"></div>
+        </div>
+      </div>
+      <div class="row g-2">
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-3"></div>
+        </div>
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-4"></div>
+        </div>
+      </div>
+      <div class="row g-2">
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-5"></div>
+        </div>
+        <div class="col-lg-6 p-2">
+          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-6"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
-
