added support for multiple graph types

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,11 +13,14 @@
       </p>
       <button id="add-graph" type="button" class="btn btn-primary">Add a new graph</button>
 
-      <div id="select-graph">
+      <div id="select-graph-div">
 
       </div>
-      <div id="select-resource">
+      <div id="select-resource-div">
 
+      </div>
+      <div id="select-variabele-div">
+      
       </div>
     </div>
     <div class="col-9">
