--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% block head %}
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    {% block styles %}
-    <!-- Bootstrap CSS -->
-    {{ bootstrap.load_css() }}
-    <link
-      rel="stylesheet"
-      href="{{url_for('static', filename='css/style.css')}}"
-    />
-    {% endblock %}
+<head>
+  {% block head %}
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>
-        {% block title %}{% endblock %}
-    </title>
-    {% endblock %}
-  </head>
-  <body>
-    <!-- page content -->
-    {% block content %}{% endblock %} {% block scripts %}
-    <!-- Optional JavaScript -->
-    {{ bootstrap.load_js() }}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="{{url_for('static', filename='js/script.js')}}"></script>
-    {% endblock %}
-  </body>
+  {% block styles %}
+  <!-- Bootstrap CSS -->
+  {{ bootstrap.load_css() }}
+  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" />
+  {% endblock %}
+
+  <title>
+    {% block title %}{% endblock %}
+  </title>
+  {% endblock %}
+</head>
+
+<body>
+  <!-- page content -->
+  {% block content %}{% endblock %} {% block scripts %}
+  <!-- Optional JavaScript -->
+  {{ bootstrap.load_js() }}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script type="module" src="{{url_for('static', filename='js/script.js')}}"></script>
+  {% endblock %}
+</body>
+
 </html>
-
