--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,8 @@
   {{ bootstrap.load_js() }}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script type="module" src="{{url_for('static', filename='js/script.js')}}"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   {% endblock %}
 </body>
 
