--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,30 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Care Dashboard{% endblock %}
 {% block content %}
-
-<body style="font-family:arial, sans-serif">
-  <input type="text" id="fname" name="fname" onchange="cb(this.value)">
-</body>
-
-<head>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
-      function cb(selection) {
-          $.getJSON({
-              url: "/callback", data: { 'data': selection }, success: function (result) {
-                  Plotly.newPlot('chart', result, {staticPlot: true});;
-              }
-          });
-      }
-  </script>
-</head>
-
-<script>
+<!-- <script>
   d = {{ graphJSON | safe }};
   d.config={staticPlot: true};
   Plotly.newPlot('chart', d, {});
-</script>
+</script> -->
 
 
 <div class="container-fluid">
@@ -38,10 +19,10 @@
         To add a new graph, first select an container in which you want to place your new graph.
       </p>
       <button id="add-graph" type="button" class="btn btn-primary">Add a new graph</button>
-
+      <button id="create-graph" type="button" class="btn btn-primary">Go</button>
       <div id="select-graph-div">
 
-      </div>image.png
+      </div>
       <div id="select-resource-div">
 
       </div>
