--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,11 +30,11 @@
 
     </div>
   </div>
-    <div class="col-9">
+    <div class="col-9" id="graph-locations">
       <div class="row g-2">
         <div class="col-lg-6 p-2">
           <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-1">
-            <div id="chart" class="chart"></div>
+
           </div>
         </div>
         <div class="col-lg-6 p-2">
