--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,26 +12,36 @@
   <div class="row">
   </div>
   <div class="row min-vh-100">
-    <div class="col-3 text-white pt-2" style= "background-color: #1A374D">
-      <h1 class="h2 mb-0" style="color: #B1D0E0">MedDash</h1>
-      <br>
-      <p>
-        To add a new graph, first select an container in which you want to place your new graph.
-      </p>
-      <button id="add-graph" type="button" class="btn btn-primary">Add a new graph</button>
-      <button id="create-graph" type="button" class="btn btn-primary">Go</button>
-      <button id="AI-help" type="button" class="btn btn-success rounded-circle"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">?</button>
-      <div id="select-graph-div">
+    <div class="col-auto text-white pt-2 position-relative" style= "background-color: #93BFCF; min-width: 88px">
+      <button id="collapsebutton" class="btn btn-dark position-absolute top-0 end-0 mt-2 me-2" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="true">
+        Toggle
+      </button>
+      <div id="navbar" class="content collapse show" style="width: 25vw">
+        <h1 class="h2 mb-0" style="color: #144272">MedDash</h1> 
+        <br>
+        <p>
+          To add a new graph, click the button below, then the place you want to add the graph.
+        </p>
+        <button id="add-graph" type="button" class="btn btn-outline-dark text-white" style = "background-color: #6096B4">Add a new graph</button>
+        <button id="create-graph" type="button" class="btn btn-outline-dark text-white" style = "background-color: #6096B4">
+          <span id="Go-button-text">Go</span>
+          <span id="Go-button-spinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
+        </button>
+        <button id="AI-help" type="button" class="btn btn-outline-dark rounded-circle text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style = "background-color: #6096B4">?</button>
+        
+        <div id="select-graph-div">
 
+        </div>
+        <div id="select-resource-div">
+
+        </div>
+        <div id="select-variabele-div">
+
+        </div>
       </div>
-      <div id="select-resource-div">
-
-      </div>
-      <div id="select-variabele-div">
-
+      
     </div>
-  </div>
-    <div class="col-9">
+    <div class="col">
       <div class="row g-2">
         <div class="col-lg-6 p-2">
           <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-1">
@@ -73,10 +83,13 @@
         <label class="d-block">Enter your query</label>
         <div class="row mb-3">
           <div class="col">
-            <input id="ai-prompt" type="text" class="form-control" placeholder=""> 
+            <input id="ai-prompt" type="text" class="form-control" placeholder="What kind of plot do I need when..."> 
           </div>
           <div class="col-auto">
-            <button id="ai-submit" type="button" class="btn btn-primary">&rarr;</button>
+            <button id="ai-submit" type="button" class="btn btn-primary btn-outline-dark" style="background-color: #A0C3D2">
+              <span id="ai-button-text">&rarr;</span>
+              <span id="ai-button-spinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
+            </button>         
           </div>
         </div>
         
@@ -84,7 +97,8 @@
         <textarea id="ai-result" rows="8" class="form-control bg-light" readonly></textarea>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Use</button>
+        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Close</button>
       </div>
     </div>
   </div>
