--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,17 +6,20 @@
   d.config={staticPlot: true};
   Plotly.newPlot('chart', d, {});
 </script> -->
-
+<head>
+  <title>font awesome icons</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <div class="container-fluid">
   <div class="row">
   </div>
   <div class="row min-vh-100">
-    <div class="col-auto text-white pt-2 position-relative" style= "background-color: #93BFCF; min-width: 88px">
-      <button id="collapsebutton" class="btn btn-dark position-absolute top-0 end-0 mt-2 me-2" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="true">
-        Toggle
+    <div class="col-auto text-white pt-2 position-relative" style= "background-color: #93BFCF; min-width: 45px">
+      <button id="collapsebutton" class="btn btn-outline-secondary position-absolute top-0 end-0 mt-2 me-2" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="true">
+        <i class="fa fa-angle-left" aria-hidden="true"></i>
       </button>
-      <div id="navbar" class="content collapse show" style="width: 25vw">
+      <div id="navbar" class="content collapse show" style="width: 22vw">
         <h1 class="h2 mb-0" style="color: #144272">MedDash</h1> 
         <br>
         <p>
@@ -27,7 +30,9 @@
           <span id="Go-button-text">Go</span>
           <span id="Go-button-spinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
         </button>
-        <button id="AI-help" type="button" class="btn btn-outline-dark rounded-circle text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style = "background-color: #6096B4">?</button>
+        <button id="AI-help" type="button" class="btn btn-outline-dark rounded-circle text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style = "background-color: #6096B4; display: none;">
+          <i class="fa fa-question-circle-o" aria-hidden="true"></i>
+        </button>
         
         <div id="select-graph-div">
 
@@ -83,7 +88,7 @@
         <label class="d-block">Enter your query</label>
         <div class="row mb-3">
           <div class="col">
-            <input id="ai-prompt" type="text" class="form-control" placeholder="What kind of plot do I need when..."> 
+            <input id="ai-prompt" type="text" class="form-control" placeholder="What kind of graph do I need when..."> 
           </div>
           <div class="col-auto">
             <button id="ai-submit" type="button" class="btn btn-primary btn-outline-dark" style="background-color: #A0C3D2">
@@ -97,7 +102,7 @@
         <textarea id="ai-result" rows="8" class="form-control bg-light" readonly></textarea>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Use</button>
+        <button id ="Usebutton" type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Use</button>
         <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Close</button>
       </div>
     </div>
