Fixed resize issues, added frontend filter support

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,13 @@
       </div>
       <div id="select-variabele-div">
 
-    </div>
+      </div>
+      <div id="select-dates-div">
+      
+      </div>
+      <div id="select-additional-filters">
+      
+      </div>
   </div>
     <div class="col-9">
       <div class="row g-2">
