added importing/exporting dashboards

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,9 @@
 
 
 <div class="container-fluid">
+  <button id="generate-data">generate data</button>
+  <button id="export">export</button>
+  <button id="import">import</button>
   <div class="row">
   </div>
   <div class="row min-vh-100">
