--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
   d.config={staticPlot: true};
   Plotly.newPlot('chart', d, {});
 </script> -->
+
 <head>
   <title>font awesome icons</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,25 +19,29 @@
   <div class="row">
   </div>
   <div class="row min-vh-100">
-    <div class="col-auto text-white pt-2 position-relative" style= "background-color: #93BFCF; min-width: 45px">
-      <button id="collapsebutton" class="btn btn-outline-secondary position-absolute top-0 end-0 mt-2 me-2" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="true">
+    <div class="col-auto text-white pt-2 position-relative" style="background-color: #93BFCF; min-width: 45px">
+      <button id="collapsebutton" class="btn btn-outline-secondary position-absolute top-0 end-0 mt-2 me-2"
+        data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="true">
         <i class="fa fa-angle-left" aria-hidden="true"></i>
       </button>
       <div id="navbar" class="content collapse show" style="width: 22vw">
-        <h1 class="h2 mb-0" style="color: #144272">MedDash</h1> 
+        <h1 class="h2 mb-0" style="color: #144272">MedDash</h1>
         <br>
         <p>
           To add a new graph, click the button below, then the place you want to add the graph.
         </p>
-        <button id="add-graph" type="button" class="btn btn-outline-dark text-white" style = "background-color: #6096B4">Add a new graph</button>
-        <button id="create-graph" type="button" class="btn btn-outline-dark text-white" style = "background-color: #6096B4">
+        <button id="add-graph" type="button" class="btn btn-outline-dark text-white"
+          style="background-color: #6096B4">Add a new graph</button>
+        <button id="create-graph" type="button" class="btn btn-outline-dark text-white"
+          style="background-color: #6096B4">
           <span id="Go-button-text">Go</span>
           <span id="Go-button-spinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
         </button>
-        <button id="AI-help" type="button" class="btn btn-outline-dark rounded-circle text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style = "background-color: #6096B4; display: none;">
+        <button id="AI-help" type="button" class="btn btn-outline-dark rounded-circle text-white" data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop" style="background-color: #6096B4; display: none;">
           <i class="fa fa-question-circle-o" aria-hidden="true"></i>
         </button>
-        
+
         <div id="select-graph-div">
 
         </div>
@@ -47,13 +52,13 @@
 
         </div>
         <div id="select-dates-div">
-        
+
         </div>
         <div id="select-additional-filters">
-        
+
         </div>
       </div>
-      
+
     </div>
     <div class="col">
       <div class="row g-2">
@@ -86,7 +91,8 @@
   </div>
 </div>
 
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -97,22 +103,25 @@
         <label class="d-block">Enter your query</label>
         <div class="row mb-3">
           <div class="col">
-            <input id="ai-prompt" type="text" class="form-control" placeholder="What kind of graph do I need when..."> 
+            <input id="ai-prompt" type="text" class="form-control" placeholder="What kind of graph do I need when...">
           </div>
           <div class="col-auto">
-            <button id="ai-submit" type="button" class="btn btn-primary btn-outline-dark" style="background-color: #A0C3D2">
+            <button id="ai-submit" type="button" class="btn btn-primary btn-outline-dark"
+              style="background-color: #A0C3D2">
               <span id="ai-button-text">&rarr;</span>
               <span id="ai-button-spinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
-            </button>         
+            </button>
           </div>
         </div>
-        
+
         <label class="d-block">Result</label>
         <textarea id="ai-result" rows="8" class="form-control bg-light" readonly></textarea>
       </div>
       <div class="modal-footer">
-        <button id ="Usebutton" type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Use</button>
-        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Close</button>
+        <button id="Usebutton" type="button" class="btn btn-outline-dark" data-bs-dismiss="modal"
+          style="background-color: #A0C3D2">Use</button>
+        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal"
+          style="background-color: #A0C3D2">Close</button>
       </div>
     </div>
   </div>
