--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,6 +16,9 @@
   <button id="generate-data">generate data</button>
   <button id="export">export</button>
   <button id="import">import</button>
+  <button id="preset-1-button">1</button>
+  <button id="preset-2-button">2</button>
+  <button id="preset-3-button">3</button>
   <div class="row">
   </div>
   <div class="row min-vh-100">
@@ -61,33 +64,95 @@
 
     </div>
     <div class="col">
-      <div class="row g-2">
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-1">
-            <div id="chart" class="chart"></div>
+      <div id="preset-1">
+        <h3 contenteditable="true">Preset 1</h3>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-1">
+              <div id="chart" class="chart"></div>
+            </div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-2"></div>
           </div>
         </div>
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-2"></div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-3"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-4"></div>
+          </div>
+        </div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-5"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-6"></div>
+          </div>
         </div>
       </div>
-      <div class="row g-2">
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-3"></div>
+      <div id="preset-2">
+        <h3 contenteditable="true">Preset 2</h3>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-7">
+              <div id="chart" class="chart"></div>
+            </div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-8"></div>
+          </div>
         </div>
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-4"></div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-9"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-10"></div>
+          </div>
+        </div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-11"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-12"></div>
+          </div>
         </div>
       </div>
-      <div class="row g-2">
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-5"></div>
+      <div id="preset-3">
+        <h3 contenteditable="true">Preset 3</h3>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-13">
+              <div id="chart" class="chart"></div>
+            </div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-14"></div>
+          </div>
         </div>
-        <div class="col-lg-6 p-2">
-          <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-6"></div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-15"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-16"></div>
+          </div>
+        </div>
+        <div class="row g-2">
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-17"></div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="w-100 h-100 bg-light graph-container" style="min-height: 400px" id="graph-location-18"></div>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
