Style import/export/generate buttons

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,9 +12,12 @@
 </head>
 
 <div class="container-fluid">
-  <button id="generate-data">generate data</button>
-  <button id="export">export</button>
-  <button id="import">import</button>
+  <div class="br-container">
+    <button id="generate-data" class="br-icon"><i class="fa fa-database" style="color: #fcfcfc;font-size:36px;"></i></button>
+    <button id="export" class="br-icon"><i class="fa fa-cloud-download" style="color: #fcfcfc;font-size:36px;"></i></button>
+    <button id="import" class="br-icon"><i class="fa fa-cloud-upload" style="color: #fcfcfc;font-size:36px;"></i></button>
+  </div>
+
   <div class="row">
   </div>
   <div class="row min-vh-100">
