--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -21,3 +21,32 @@ body {
   cursor: pointer;
   background-color: #DAEAF1;
 }
+
+.br-container
+{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+}
+
+.br-icon
+{
+  border-radius: 100%;
+  background-color: #6096B4;
+  box-shadow: 2px 2px 10px 1px rgba(0,0,0,0.58);
+  padding: 8px;
+  -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+}
+.br-icon::before 
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 28px;
+  font-weight: 600;
+}
