added retrieving filter values

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,6 +16,7 @@
   <button id="generate-data">generate data</button>
   <button id="export">export</button>
   <button id="import">import</button>
+  <button id="test">test</button>
   <div class="row">
   </div>
   <div class="row min-vh-100">
