Advance filtering implemented in frontend

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button id="addFilters" type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Apply</button>
+            <button id="create-graph" type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Apply</button>
             <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal" style="background-color: #A0C3D2">Close</button>
           </div>
       </div>
