--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -149,5 +149,19 @@
   </div>
 </div>
 
+<!-- Toast message -->
+<div class="position-absolute p-3 top-50 start-50 translate-middle-y" style="z-index: 11">
+  <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <!-- TODO add logo here -->
+      <img src="..." class="rounded me-2" alt="...">
+      <strong class="me-auto">Graph created</strong>
+    </div>
+    <div class="toast-body">
+      Your new graph is ready.
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
