--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,7 @@
         <i class="fa fa-angle-left" aria-hidden="true"></i>
       </button>
       <div id="navbar" class="content collapse show" style="width: 22vw">
-        <h1 class="h2 mb-0" style="color: #144272">MedDash</h1>
+        <img src="/static/img/Med2.png" class="img-thumbnail border-0 bg-transparent" width="250xp">
         <br>
         <div class="container-buttons">
           <button id="add-graph" type="button" class="btn btn-outline-dark text-white" style = "background-color: #6096B4">Add a new graph</button>
